force-app/main/default/objects/Case/fields/Raison_de_d_sabonnement__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_d_sabonnement__c</fullName>
    <label>Raison de désabonnement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- Frais de réédition</fullName>
            </value>
            <value>
                <fullName>2- Régularisation</fullName>
            </value>
            <value>
                <fullName>3- Trop cher</fullName>
            </value>
            <value>
                <fullName>4- Rentabilité</fullName>
            </value>
            <value>
                <fullName>5- Pas de consommation</fullName>
            </value>
            <value>
                <fullName>6- Concurrence</fullName>
            </value>
            <value>
                <fullName>7- Insécurité</fullName>
            </value>
            <value>
                <fullName>8- Va au cinéma seul</fullName>
            </value>
            <value>
                <fullName>9- Places via le CE</fullName>
            </value>
            <value>
                <fullName>10- Femme enceinte</fullName>
            </value>
            <value>
                <fullName>11- Raison de santé</fullName>
            </value>
            <value>
                <fullName>12- Départ Hors Zone</fullName>
            </value>
            <value>
                <fullName>13- Prison</fullName>
            </value>
            <value>
                <fullName>14- Chômage</fullName>
            </value>
            <value>
                <fullName>15- Décès</fullName>
            </value>
            <value>
                <fullName>16- Programmation</fullName>
            </value>
            <value>
                <fullName>17- Mécontent d&#39;UGC</fullName>
            </value>
            <value>
                <fullName>18- Problème technique</fullName>
            </value>
            <value>
                <fullName>19- Suspension</fullName>
            </value>
            <value>
                <fullName>20- Pas de raison donnée</fullName>
            </value>
            <value>
                <fullName>21- Autres</fullName>
            </value>
            <value>
                <fullName>Manque de temps</fullName>
                <isActive>false</isActive>
                <label>Manque de temps</label>
            </value>
            <value>
                <fullName>Programation</fullName>
                <isActive>false</isActive>
                <label>Programation</label>
            </value>
            <value>
                <fullName>Rentabilité</fullName>
                <isActive>false</isActive>
                <label>Rentabilité</label>
            </value>
            <value>
                <fullName>Tarif</fullName>
                <isActive>false</isActive>
                <label>Tarif</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>