force-app/main/default/objects/Case/fields/Raison_remboursement__c.field-meta.xml
<CustomField>
    <fullName>Raison_remboursement__c</fullName>
    <label>Raison remboursement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Moyen_de_paiement_souhait__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1- CB Achat &gt; 1 an - Délai OK</fullName>
            </value>
            <value>
                <fullName>A2- E-CB - Délai dépassé : Motif client à préciser</fullName>
            </value>
            <value>
                <fullName>A2- CB Achat &gt; 1 an - Délai dépassé : Motif client à préciser</fullName>
            </value>
            <value>
                <fullName>A2- E-CB - Délai dépassé : Incident Technique UGC</fullName>
            </value>
            <value>
                <fullName>A2- CB Achat &gt; 1 an - Délai dépassé : Incident Technique UGC</fullName>
            </value>
            <value>
                <fullName>B1- CB Achat &lt; 1 an : Retour KO ATOS</fullName>
            </value>
            <value>
                <fullName>B2- CB Achat &lt; 1 an - Délai OK : Motif client à préciser</fullName>
            </value>
            <value>
                <fullName>B2- CB Achat &lt; 1 an - Délai dépassé : Motif client à préciser</fullName>
            </value>
            <value>
                <fullName>B2- CB Achat &lt; 1 an - Délai dépassé : Incident Technique UGC</fullName>
            </value>
            <value>
                <fullName>C1- Achat salle annulation UGC</fullName>
            </value>
            <value>
                <fullName>double débit</fullName>
            </value>
            <value>
                <fullName>resa introuvable</fullName>
            </value>
            <value>
                <fullName>G23- Rétractation</fullName>
            </value>
            <value>
                <fullName>G23-Trop perçu</fullName>
            </value>
            <value>
                <fullName>G23- Décès</fullName>
            </value>
            <value>
                <fullName>G23- Réduction préavis</fullName>
            </value>
            <value>
                <fullName>G20- Désabo anticipé</fullName>
            </value>
            <value>
                <fullName>G21- Résiliation</fullName>
            </value>
            <value>
                <fullName>G23- Annulation</fullName>
            </value>
            <value>
                <fullName>G22- Doublon</fullName>
            </value>
            <value>
                <fullName>G23- Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>