force-app/main/default/objects/Case/fields/RebondCommercial__c.field-meta.xml
<CustomField>
    <fullName>RebondCommercial__c</fullName>
    <label>Rebond commercial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposé - accepté</fullName>
            </value>
            <value>
                <fullName>Proposé - refusé</fullName>
            </value>
            <value>
                <fullName>Non proposé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>