force-app/main/default/objects/Case/fields/ReditionCarte__c.field-meta.xml
<CustomField>
    <fullName>ReditionCarte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réédition de carte</label>
    <type>Checkbox</type>
</CustomField>