force-app/main/default/objects/Case/fields/Reglementdimpaye__c.field-meta.xml
<CustomField>
    <fullName>Reglementdimpaye__c</fullName>
    <label>Règlement d&#39;impayé</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>