force-app/main/default/objects/Case/fields/RemboursementFaire__c.field-meta.xml
<CustomField>
    <fullName>RemboursementFaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quand c est coché une demande de remboursement est automatiquement crée</description>
    <label>Remboursement à faire</label>
    <type>Checkbox</type>
</CustomField>