force-app/main/default/objects/Case/fields/RemboursementValeur__c.field-meta.xml
<CustomField>
    <fullName>RemboursementValeur__c</fullName>
    <label>Remboursement d&#39;une valeur de</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>