force-app/main/default/objects/Case/fields/sous_motif_de_r_siliation__c.field-meta.xml
<CustomField>
    <fullName>sous_motif_de_r_siliation__c</fullName>
    <label>sous motif de résiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraude</fullName>
            </value>
            <value>
                <fullName>Menace et / ou Violence envers le personnel UGC</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>