force-app/main/default/objects/Case/fields/SousCategorie__c.field-meta.xml
<CustomField>
    <fullName>SousCategorie__c</fullName>
    <label>Sous Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categorie__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aanvraag annulatie contract (preciseren)</fullName>
            </value>
            <value>
                <fullName>Accès handicapés</fullName>
            </value>
            <value>
                <fullName>Andere (preciseren)</fullName>
            </value>
            <value>
                <fullName>Appels NL</fullName>
            </value>
            <value>
                <fullName>Au contrôle</fullName>
            </value>
            <value>
                <fullName>Autres (à préciser)</fullName>
            </value>
            <value>
                <fullName>AVP supprimée/reportée</fullName>
            </value>
            <value>
                <fullName>Betaling incident op stand</fullName>
            </value>
            <value>
                <fullName>Billetterie CNC</fullName>
            </value>
            <value>
                <fullName>Carte abîmée ( à préciser)</fullName>
            </value>
            <value>
                <fullName>Carte démagnétisée</fullName>
            </value>
            <value>
                <fullName>Carte journaliste</fullName>
            </value>
            <value>
                <fullName>Carte permanente</fullName>
            </value>
            <value>
                <fullName>Carte professionnelle UGC</fullName>
            </value>
            <value>
                <fullName>Carte SACEM</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>Confiserie / Ciné Café</fullName>
            </value>
            <value>
                <fullName>Dans la file d&#39;attente</fullName>
            </value>
            <value>
                <fullName>Déclenchement alarme/évacuation</fullName>
            </value>
            <value>
                <fullName>Délai de retrait</fullName>
            </value>
            <value>
                <fullName>Demande Annulation de contrat</fullName>
            </value>
            <value>
                <fullName>Demande Annulation de Contrat (à expliquer)</fullName>
            </value>
            <value>
                <fullName>Déprogrammation de séance</fullName>
            </value>
            <value>
                <fullName>Double facturation</fullName>
            </value>
            <value>
                <fullName>En borne</fullName>
            </value>
            <value>
                <fullName>En caisse</fullName>
            </value>
            <value>
                <fullName>Erreur communication in situ</fullName>
            </value>
            <value>
                <fullName>Erreur Confiserie/Ciné Café</fullName>
            </value>
            <value>
                <fullName>Erreur en caisse</fullName>
            </value>
            <value>
                <fullName>Etat copie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>