force-app/main/default/objects/Case/fields/SousMotif__c.field-meta.xml
<CustomField>
    <fullName>SousMotif__c</fullName>
    <label>Sous-motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motif__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>I- Info</fullName>
            </value>
            <value>
                <fullName>R- Récla</fullName>
            </value>
            <value>
                <fullName>A- Action</fullName>
            </value>
            <value>
                <fullName>Click to Call Info</fullName>
            </value>
            <value>
                <fullName>Click to Call Recla</fullName>
            </value>
            <value>
                <fullName>AD- Action DRC</fullName>
            </value>
            <value>
                <fullName>AS- Action Stand</fullName>
            </value>
            <value>
                <fullName>AH- Action Selfcare</fullName>
            </value>
            <value>
                <fullName>R1- 1er rejet</fullName>
            </value>
            <value>
                <fullName>R2- 2nd rejet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>