force-app/main/default/objects/Case/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abonnement</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Zuora__Subscription__c.Zuora__Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Zuora__Subscription__c</referenceTo>
    <relationshipLabel>Demandes</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>