force-app/main/default/objects/Case/fields/SubscriptionZID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionZID__c</fullName>
    <description>Stock l&#39;Id Zuora de la souscription</description>
    <label>Zuora Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>