force-app/main/default/objects/Case/fields/SubscriptionZName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionZName__c</fullName>
    <description>Stock le name Zuora de la souscription</description>
    <label>Zuora Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>