force-app/main/default/objects/Case/fields/TECH_AccountId__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccountId__c</fullName>
    <formula>AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_AccountId</label>
    <type>Text</type>
</CustomField>