force-app/main/default/objects/Case/fields/tech_adressetitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_adressetitulaireducompte__c</fullName>
    <formula>IF( Account.Payeur__c =&#39;&#39;,   Account.AdressePostale__c   , IF(Account.Payeur__c &lt;&gt; &#39;&#39;,  Account.Payeur__r.AdressePostale__c  , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_adressetitulaireducompte</label>
    <type>Text</type>
</CustomField>