force-app/main/default/objects/Case/fields/TECH_Alert__c.field-meta.xml
<CustomField>
    <fullName>TECH_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si une alerte a été lancée sur ce case.</description>
    <label>Alerté</label>
    <type>Checkbox</type>
</CustomField>