force-app/main/default/objects/Case/fields/TECH_CodePays__c.field-meta.xml
<CustomField>
    <fullName>TECH_CodePays__c</fullName>
    <description>Champ technique utilisé par le flux pour alimenter Vertica.</description>
    <formula>Account.CodePays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CodePays</label>
    <type>Text</type>
</CustomField>