force-app/main/default/objects/Case/fields/TECH_CodePaysFormulaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_CodePaysFormulaire__c</fullName>
    <description>Ce champ est alimenté lors de la création de tickets issus du formulaire de contact : 
BE si formulaire belge
FR si formulaire français</description>
    <label>TECH_CodePaysFormulaire</label>
    <length>10</length>
    <type>Text</type>
</CustomField>