force-app/main/default/objects/Case/fields/TECH_Date_fin_engagement__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_fin_engagement__c</fullName>
    <formula>Date_fin_engagement__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin d&#39;engagement</label>
    <type>Date</type>
</CustomField>