force-app/main/default/objects/Case/fields/TECH_DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>TECH_DateFinContrat__c</fullName>
    <formula>DateFinContrat__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin de contrat</label>
    <type>Date</type>
</CustomField>