force-app/main/default/objects/Case/fields/Tech_enAttente__c.field-meta.xml
<CustomField>
    <fullName>Tech_enAttente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quand le statut de la demande client est &quot;en attente X&quot; alors une action de workflow se déclenche pour la cochée automatiquement pour entrer dans les critères du process builder &quot;Clôture automatique&quot;</description>
    <label>En attente</label>
    <type>Checkbox</type>
</CustomField>