force-app/main/default/objects/Case/fields/tech_firstmonth__c.field-meta.xml
<CustomField>
    <fullName>tech_firstmonth__c</fullName>
    <formula>IF(Subscription__r.Offre__c = &#39;UI1&#39;, &#39;19,90€&#39;,  IF(Subscription__r.Offre__c = &quot;UI2&quot;, &#39;33,90€&#39;, IF(Subscription__r.Offre__c = &#39;UI3&#39;, &#39;16,90€&#39;, IF(Subscription__r.Offre__c = &#39;UU&#39;, &#39;UGC Unlimited&#39;, &#39;18,90€&#39;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_firstmonth</label>
    <type>Text</type>
</CustomField>