force-app/main/default/objects/Case/fields/TECH_FormulaireFlamand__c.field-meta.xml
<CustomField>
    <fullName>TECH_FormulaireFlamand__c</fullName>
    <description>Ce champ est alimenté lors de la création de tickets issus du formulaire de contact : 
TRUE si formulaire flamand
FALSE si formulaire français</description>
    <label>TECH_FormulaireFlamand</label>
    <length>10</length>
    <type>Text</type>
</CustomField>