force-app/main/default/objects/Case/fields/TECH_GeneratedDoc__c.field-meta.xml
<CustomField>
    <fullName>TECH_GeneratedDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_GeneratedDoc</label>
    <type>Checkbox</type>
</CustomField>