force-app/main/default/objects/Case/fields/TECH_idCritizr__c.field-meta.xml
<CustomField>
    <fullName>TECH_idCritizr__c</fullName>
    <label>TECH_idCritizr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>