force-app/main/default/objects/Case/fields/TECH_idFacebook__c.field-meta.xml
<CustomField>
    <fullName>TECH_idFacebook__c</fullName>
    <label>TECH_idFacebook</label>
    <length>100</length>
    <type>Text</type>
</CustomField>