force-app/main/default/objects/Case/fields/TECH_idInstagram__c.field-meta.xml
<CustomField>
    <fullName>TECH_idInstagram__c</fullName>
    <label>TECH_idInstagram</label>
    <length>100</length>
    <type>Text</type>
</CustomField>