force-app/main/default/objects/Case/fields/TECH_IdMonCompte__c.field-meta.xml
<CustomField>
    <fullName>TECH_IdMonCompte__c</fullName>
    <description>Champ technique utilisé par le flux pour alimenter Vertica.</description>
    <formula>Account.IdMonCompte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IdMonCompte</label>
    <type>Text</type>
</CustomField>