force-app/main/default/objects/Case/fields/TECH_Last_Semi_Auto_Sdoc__c.field-meta.xml
<CustomField>
    <fullName>TECH_Last_Semi_Auto_Sdoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH_Last Semi-Auto Sdoc</label>
    <referenceTo>SDOC__SDoc__c</referenceTo>
    <relationshipLabel>Requêtes</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>