force-app/main/default/objects/Case/fields/TECH_Last_Semi_Auto_SDoc_Job__c.field-meta.xml
<CustomField>
    <fullName>TECH_Last_Semi_Auto_SDoc_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ inutile</description>
    <label>TECH_Last Semi-Auto SDoc Job</label>
    <referenceTo>SDOC__SDJob__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>