force-app/main/default/objects/Case/fields/TECH_NBPrintFileCompteur__c.field-meta.xml
<CustomField>
    <fullName>TECH_NBPrintFileCompteur__c</fullName>
    <label>TECH_NBPrintFileCompteur</label>
    <summaryForeignKey>File_Impression__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>