force-app/main/default/objects/Case/fields/TECH_NBPrintFileTotal__c.field-meta.xml
<CustomField>
    <fullName>TECH_NBPrintFileTotal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Dénombre le nombre totate de Fil d&#39;impression attendu pour le Case en cours (carte prise en compte)</description>
    <label>TECH_NBPrintFileTotal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>