force-app/main/default/objects/Case/fields/TECH_NoCarteFideliteFormulaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_NoCarteFideliteFormulaire__c</fullName>
    <description>Ce champ sera alimenté par le numéro de carte Fidélité renseigné par le client dans le formulaire de contact 
(numéro de carte contient 16 chiffres et commence par 831-)</description>
    <label>N° Carte fidélité issu du formulaire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>