force-app/main/default/objects/Case/fields/TECH_NoCarteFormulaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_NoCarteFormulaire__c</fullName>
    <description>Ce champ sera alimenté par le numéro de carte renseigné par le client dans le formulaire de contact</description>
    <label>TECH_NoCarteFormulaire</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>