force-app/main/default/objects/Case/fields/TECH_NoCartes__c.field-meta.xml
<CustomField>
    <fullName>TECH_NoCartes__c</fullName>
    <description>Ce champ copie la valeur du champ de la fiche client afin de l&#39;afficher sur la bandeau du ticket</description>
    <formula>Account.NoCartes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéros Carte</label>
    <type>Text</type>
</CustomField>