force-app/main/default/objects/Case/fields/TECH_NoCarteUIFormulaire__c.field-meta.xml
<CustomField>
    <fullName>TECH_NoCarteUIFormulaire__c</fullName>
    <description>Ce champ sera alimenté par le numéro de carte UI renseigné par le client dans le formulaire de contact 
(numéro de carte contient 11 chiffres et commence par 000, ou 01)</description>
    <label>TECH_NoCarteUIFormulaire</label>
    <length>20</length>
    <type>Text</type>
</CustomField>