force-app/main/default/objects/Case/fields/tech_nomtitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_nomtitulaireducompte__c</fullName>
    <formula>IF( Account.Payeur__c =&#39;&#39;, Account.LastName , IF(Account.Payeur__c &lt;&gt; &#39;&#39;, Account.Payeur__r.LastName , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_nomtitulaireducompte</label>
    <type>Text</type>
</CustomField>