force-app/main/default/objects/Case/fields/tech_nomvoietitulairecompte__c.field-meta.xml
<CustomField>
    <fullName>tech_nomvoietitulairecompte__c</fullName>
    <formula>IF(Account.Payeur__c =&#39;&#39;,Account.NomVoie__c,IF(Account.Payeur__c &lt;&gt; &#39;&#39;,Account.Payeur__r.NomVoie__c, &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_nomvoietitulairecompte</label>
    <type>Text</type>
</CustomField>