force-app/main/default/objects/Case/fields/tech_novoietitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_novoietitulaireducompte__c</fullName>
    <formula>IF( Account.Payeur__c =&#39;&#39;,Account.NoVoie__c, IF(Account.Payeur__c &lt;&gt; &#39;&#39;,Account.Payeur__r.NoVoie__c, &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_novoietitulaireducompte</label>
    <type>Text</type>
</CustomField>