force-app/main/default/objects/Case/fields/tech_paystitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_paystitulaireducompte__c</fullName>
    <formula>IF( Account.Payeur__c =&#39;&#39;, TEXT(Account.Pays__c), IF(Account.Payeur__c &lt;&gt; &#39;&#39;, TEXT(Account.Payeur__r.Pays__c), &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_paystitulaireducompte</label>
    <type>Text</type>
</CustomField>