force-app/main/default/objects/Case/fields/tech_prenomtitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_prenomtitulaireducompte__c</fullName>
    <formula>IF( Account.Payeur__c =&#39;&#39;, Account.FirstName , IF(Account.Payeur__c &lt;&gt; &#39;&#39;, Account.Payeur__r.FirstName , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_prenomtitulaireducompte</label>
    <type>Text</type>
</CustomField>