force-app/main/default/objects/Case/fields/TECH_SousMotifMatrice__c.field-meta.xml
<CustomField>
    <fullName>TECH_SousMotifMatrice__c</fullName>
    <description>Ce champ est alimenté automatiquement avec le sous motif du contact associé à l&#39;ID du statut (objet Statut) 
Ce champ n&#39;est pas affiché sur la page layout et sera utilisé pour la matrice de contacts</description>
    <label>Sous-Motif</label>
    <length>150</length>
    <type>Text</type>
</CustomField>