force-app/main/default/objects/Case/fields/tech_typevoietitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_typevoietitulaireducompte__c</fullName>
    <formula>IF(Account.Payeur__c =&#39;&#39;, TEXT(Account.TypeVoie__c),IF(Account.Payeur__c &lt;&gt;&#39;&#39;, TEXT(Account.Payeur__r.TypeVoie__c),&#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_typevoietitulaireducompte</label>
    <type>Text</type>
</CustomField>