force-app/main/default/objects/Case/fields/tech_zipcodetitulaireducompte__c.field-meta.xml
<CustomField>
    <fullName>tech_zipcodetitulaireducompte__c</fullName>
    <formula>IF( Account.Payeur__c =&#39;&#39;, Account.CodePostal__c , IF(Account.Payeur__c &lt;&gt; &#39;&#39;, Account.Payeur__r.CodePostal__c , &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech_zipcodetitulaireducompte</label>
    <type>Text</type>
</CustomField>