force-app/main/default/objects/Case/fields/TechApprobationDRC__c.field-meta.xml
<CustomField>
    <fullName>TechApprobationDRC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quand le DRC approuve une demande de remboursement alors la case est cochée</description>
    <label>Tech_ApprobationDRC</label>
    <type>Checkbox</type>
</CustomField>