force-app/main/default/objects/Case/fields/TechApprobationSoumise__c.field-meta.xml
<CustomField>
    <fullName>TechApprobationSoumise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quand la case est cochée cela veut dire qu&#39;il y a eu une approbation déjà effectuée  et entre dans le processus d&#39;approbation de la soumission automatique</description>
    <label>Tech_Approbation soumise</label>
    <type>Checkbox</type>
</CustomField>