force-app/main/default/objects/Case/fields/TECHDrapeau__c.field-meta.xml
<CustomField>
    <fullName>TECHDrapeau__c</fullName>
    <description>Ce champ affiche le drapeau du pays d&#39;origine du client</description>
    <formula>Account.OrigineDrapeau__c</formula>
    <label>.</label>
    <type>Text</type>
</CustomField>