force-app/main/default/objects/Case/fields/TECHIdStatut__c.field-meta.xml
<CustomField>
    <fullName>TECHIdStatut__c</fullName>
    <description>Ce champ calcule d&#39;ID du statut en associant les numéros associé à la famille, motif et sous motif</description>
    <formula>TRIM(LEFT(TEXT(Famille__c),FIND(&quot;-&quot;, TEXT(Famille__c))-1)) &amp;

TRIM(LEFT(TEXT(Motif__c),FIND(&quot;-&quot;, TEXT(Motif__c))-1))&amp;

TRIM(LEFT(TEXT( SousMotif__c ),FIND(&quot;-&quot;, TEXT(SousMotif__c))-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Statut</label>
    <type>Text</type>
</CustomField>