force-app/main/default/objects/Case/fields/TECHRetourSalle__c.field-meta.xml
<CustomField>
    <fullName>TECHRetourSalle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique utilisé pour transférer le ticket à la file d&#39;attente &quot;Retour Salle&quot; suite à au retour de la salle sur le ticket</description>
    <label>TECHRetour Salle</label>
    <type>Checkbox</type>
</CustomField>