force-app/main/default/objects/Case/fields/TelephoneLivraison__c.field-meta.xml
<CustomField>
    <fullName>TelephoneLivraison__c</fullName>
    <description>Champ alimenté automatiquement pour la création d&#39;un ticket Fidélio</description>
    <label>Téléphone (livraison)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>